attempting to solve white bar bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,6 +111,8 @@ a {
   max-width: 650px;
   margin-top: 130px;
   margin-bottom: 10px;
+
+  position: absolute;
 }
 
 
